# LPlib

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  copyright.txt  howto.txt  todolist.md  todolist.txt  whatsup.md
Documentation/: LPlib3.tex  LPlib4.tex
cmake/: FindMETIS.cmake
examples/: CMakeLists.txt  Makefile  adaptive_blocking.c  atomic_locks.c  basic_test.c  basic_test.f  build_edges.c  colored_grains.c  colored_grains_partitioning.c  compare_sorts.c  extract_edges_and_neighbours.c  indirect_writes.c  indirect_writes.f  libmesh6.c  libmesh6.ins  libmeshb7.ins  lplib3.c  lplib3.ins  mem_clear_copy.c  tetrahedra_neighbours.c
legacy_sources/v1/: libparallel.c  libparallel.h
legacy_sources/v2/: lplib2.c
legacy_sources/v3/: basic_test.c  cpu_bandwidth.old.c  indirect_writes.c  lplib3.c  lplib3.h  lplib3.ins
sample_meshes/: tet.meshb  tet.meshb.lz  tet.meshb.xz
sources/: CMakeLists.txt  lplib3.c  lplib3.h  lplib3.ins  lplib4.c  lplib4.h
utilities/: CMakeLists.txt  Makefile  README.md  cpu_bandwidth.c  hilbert.c  libmesh6.h  libmeshb7.c  libmeshb7.h  libmeshb7_helpers.c  libmeshb7_helpers.h  lplib3.c  lplib3.h  lplib3_helpers.c  lplib3_helpers.h  lplib4_helpers.c  lplib4_helpers.h
